fixed overflow-x

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -13,6 +13,10 @@ html {
 }
 }
 
+body {
+  overflow-x: hidden;
+}
+
 body, html {
     @apply font-sans;
     font-size: 18px;
